[fix] center header on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -99,3 +99,9 @@ header p {
 .social-link i:hover {
   transform: scale(1.1);
 }
+
+@media print, screen and (max-width: 960px) {
+    header {
+        padding-right: 0;
+    }
+}
